fixed about section placements and overlapping bacground image in header

--- a/public/css/index/index_dashboard.css
+++ b/public/css/index/index_dashboard.css
@@ -255,6 +255,12 @@ body::-webkit-scrollbar-thumb {
   color: var(--white);
 }
 
+@media screen and (max-width: 1110px) {
+  .header {
+    background-image: none;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .header {
     background-image: none;
